--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <script src="scripts.js":></script>
     <title>Document</title>
 </head>
-<body>
-    Calculator
-</body>
+
+<div>1 2 3 +</div>
+<div>4 5 6 - </div>
+<div>7 8 9 = </div>
+<div>result:</div>
+
 </html>
