Added some styling

--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js":></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 
-<div>1 2 3 +</div>
-<div>4 5 6 - </div>
-<div>7 8 9 = </div>
-<div>result:</div>
+<div id="container">
+    <div class="column">
+        <div class="individual">7</div>
+        <div class="individual">8</div>
+        <div class="individual">9</div>
+        <div class="individual">/</div>
+    </div>
+
+    <div class="column">
+        <div class="individual">4</div>
+        <div class="individual">5</div>
+        <div class="individual">6</div>
+        <div class="individual">X</div>
+    </div>
+
+    <div class="column">
+        <div class="individual">1</div>
+        <div class="individual">2</div>
+        <div class="individual">3</div>
+        <div class="individual">-</div>
+    </div>
+
+</div>
 
 </html>
