--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js":></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Calculator</title>
 </head>
 
 <div id="container">
+    <div id="display"></div>
     <div class="column">
-        <div class="individual">7</div>
-        <div class="individual">8</div>
-        <div class="individual">9</div>
-        <div class="individual">/</div>
+        <div id="7" class="individual">7</div>
+        <div id="8"  class="individual">8</div>
+        <div id="9"  class="individual">9</div>
+        <div id="divide" class="individual">/</div>
     </div>
 
     <div class="column">
-        <div class="individual">4</div>
+        <div  class="individual">4</div>
         <div class="individual">5</div>
         <div class="individual">6</div>
         <div class="individual">X</div>
@@ -30,6 +31,13 @@
         <div class="individual">3</div>
         <div class="individual">-</div>
     </div>
+
+    <div class="column">
+        <div id="zero">0</div>
+        <div class="individual">+</div>
+        <div class="individual">=</div>
+    </div>
+
 
 </div>
 
