--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="scripts.js":></script>
+    <script defer src="scripts.js":></script>
     <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
 </head>
@@ -12,30 +12,30 @@
 <div id="container">
     <div id="display"></div>
     <div class="column">
-        <div id="7" class="individual">7</div>
-        <div id="8"  class="individual">8</div>
-        <div id="9"  class="individual">9</div>
+        <div id="digit-7" class="individual">7</div>
+        <div id="digit-8"  class="individual">8</div>
+        <div id="digit-9"  class="individual">9</div>
         <div id="divide" class="individual">/</div>
     </div>
 
     <div class="column">
-        <div  class="individual">4</div>
-        <div class="individual">5</div>
-        <div class="individual">6</div>
-        <div class="individual">X</div>
+        <div id="digit-4" class="individual">4</div>
+        <div id="digit-5" class="individual">5</div>
+        <div id="digit-6" class="individual">6</div>
+        <div id="multiply" class="individual">X</div>
     </div>
 
     <div class="column">
-        <div class="individual">1</div>
-        <div class="individual">2</div>
-        <div class="individual">3</div>
-        <div class="individual">-</div>
+        <div id="digit-1" class="individual">1</div>
+        <div id="digit-2" class="individual">2</div>
+        <div id="digit-3" class="individual">3</div>
+        <div id="subtract" class="individual">-</div>
     </div>
 
     <div class="column">
-        <div id="zero">0</div>
-        <div class="individual">+</div>
-        <div class="individual">=</div>
+        <div id="digit-0">0</div>
+        <div id="addition" class="individual">+</div>
+        <div id="equal" class="individual">=</div>
     </div>
 
 
