Added onclick events

--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 <div id="container">
     <div id="display"></div>
     <div class="column">
-        <div id="digit-7" class="individual">7</div>
-        <div id="digit-8"  class="individual">8</div>
-        <div id="digit-9"  class="individual">9</div>
+        <div id="digit_7" class="individual">7</div>
+        <div id="digit_8"  class="individual">8</div>
+        <div id="digit_9"  class="individual">9</div>
         <div id="divide" class="individual">/</div>
     </div>
 
     <div class="column">
-        <div id="digit-4" class="individual">4</div>
-        <div id="digit-5" class="individual">5</div>
-        <div id="digit-6" class="individual">6</div>
+        <div id="digit_4" class="individual">4</div>
+        <div id="digit_5" class="individual">5</div>
+        <div id="digit_6" class="individual">6</div>
         <div id="multiply" class="individual">X</div>
     </div>
 
     <div class="column">
-        <div id="digit-1" class="individual">1</div>
-        <div id="digit-2" class="individual">2</div>
-        <div id="digit-3" class="individual">3</div>
+        <div id="digit_1" class="individual">1</div>
+        <div id="digit_2" class="individual">2</div>
+        <div id="digit_3" class="individual">3</div>
         <div id="subtract" class="individual">-</div>
     </div>
 
     <div class="column">
-        <div id="digit-0">0</div>
+        <div id="digit_0">0</div>
         <div id="addition" class="individual">+</div>
         <div id="equal" class="individual">=</div>
     </div>
