--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
 </head>
+<div id="test">0</div>
 
 <div id="container">
     <div id="display"></div>
