Displayed all numbers

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
 </head>
-<div id="test">0</div>
 
 <div id="container">
-    <div id="display"></div>
+    <div id="display_container">
+        <div id="display">0</div>
+    </div>
+    <div class="column">
+        <div id="clear" class="individual">AC</div>
+    </div>
     <div class="column">
         <div id="digit_7" class="individual">7</div>
         <div id="digit_8"  class="individual">8</div>
