Added addition functionality

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="column">
         <div id="digit_0">0</div>
         <div id="addition" class="individual">+</div>
-        <div id="equal" class="individual">=</div>
+        <div id="evaluate" class="individual">=</div>
     </div>
 
 
