--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     </div>
 
     <div class="column">
-        <div id="digit_0">0</div>
+        <div id="digit_0" class="individual">0</div>
+        <div id="decimal" class="individual">.</div>
         <div id="addition" class="individual operator">+</div>
         <div id="evaluate" class="individual operator">=</div>
     </div>
