--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div>
     <div class="column">
         <div id="clear" class="individual">RESET</div>
+        <div id="backspace" class="individual"><img id="backspace_image" src="backspace.svg"></div>
     </div>
     <div class="column">
         <div id="digit_7" class="individual">7</div>
