--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="scripts.js":></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Calculator</title>
+    <title>Milton's Calculator</title>
 </head>
 
 
